extproc-DirectResponse-from-VS/httpbin-ef.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: apigw-qa-relngen-public-api-gateway-filter-ratelimit
  namespace: httpbin
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.ext_proc
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
          allow_mode_override: false
          failure_mode_allow: true
          grpc_service:
            envoy_grpc:
              authority: extproc-server.httpbin.svc.cluster.local
              cluster_name: outbound|9000||extproc-server.httpbin.svc.cluster.local
            timeout: 60s
          message_timeout: 20s
          processing_mode:
            request_header_mode: SEND
            response_header_mode: SEND
  workloadSelector:
    labels:
      istio: ingressgateway
---
